--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "datatables.net-buttons": "^2.2.2",
     "datatables.net-buttons-dt": "^2.2.2",
     "datatables.net-dt": "^1.11.4",
+    "firebase": "^9.6.10",
     "font-awesome": "^4.7.0",
     "highcharts": "^10.0.0",
     "http-client": "^4.3.1",
