--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "target": "es2017",
     "module": "es2020",
     "noImplicitAny": false,
+    "resolveJsonModule": true,
     "lib": [
       "es2020",
       "dom"
