--- a/angular.json
+++ b/angular.json
@@ -84,6 +84,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
+              "optimization": true,
               "outputHashing": "all"
             },
             "development": {
